# mara

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: index.html
src/: git.rs  lib.rs  main.rs  size.rs  stat.rs
tests/: integration.rs
