[package]
name = "mara"
version = "0.1.0"
edition = "2021"
description = "Find exactly what's bloating your git history"
license = "MIT"
repository = "https://github.com/iamkorun/mara"
readme = "README.md"
keywords = ["git", "cli", "bloat", "history", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
